--- a/app/views/gm_form1s/_form.html.erb
+++ b/app/views/gm_form1s/_form.html.erb
@@ -33,6 +33,7 @@
         <%= form.label :approved %>
         <%= form.text_field :approved, class: 'form-control' %>
     </div>
+    <%end%>
         <div class="actions">
         <%= form.submit 'Update gm_form1', class: 'btn btn-primary'%>
         </div>
