--- a/app/views/gm_form2s/_form.html.erb
+++ b/app/views/gm_form2s/_form.html.erb
@@ -37,6 +37,7 @@
         <%= form.label :approved %>
         <%= form.text_field :approved, class: 'form-control' %>
     </div>
+    <%end%>
         <div class="actions">
         <%= form.submit 'Update gm_form2', class: 'btn btn-primary'%>
         </div>
