--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -123,7 +123,11 @@
               </div>
 
               <ul class="col col-1 nav nav-fill right-nav flex-column ml-auto align-self-start">
+                <%if current_user.admin == true%>
+                <li class="nav-item"><%= link_to "Profile Page/Admin", user_path(current_user.id) %></li>
+                <%else%>
                 <li class="nav-item"><%= link_to "Profile Page", user_path(current_user.id) %></li>
+                <%end%>
                 <li class="nav-item"><%= link_to "User Index", users_path%></li>
                 <li class="nav-item"><%= link_to "Logout", destroy_user_session_path, method: :delete %> </li>
               </ul>
