--- a/app/views/panelist_forms/_form.html.erb
+++ b/app/views/panelist_forms/_form.html.erb
@@ -101,6 +101,7 @@
         <%= form.label :approved %>
         <%= form.text_field :approved, class: 'form-control' %>
     </div>
+    <%end%>
         <div class="actions">
         <%= form.submit 'Update panelist_form', class: 'btn btn-primary'%>
         </div>
