--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,13 @@
 <main role="main" class="container">
 
 <h1>User Forms</h1>
-
+<%if current_user.admin == true%>
 <table class="table table-sm">
   <thead>
     <tr>
       <th scope="col">User</th>
-      <th scope="col">ID</th>
+      <th scope="col">Name</th>
+      <th scope="col">Admin</th>
       <th scope="col"></th>
     </tr>
   </thead>
@@ -15,15 +16,40 @@
     <tr>
         <td><%= user.email %></td>
         <td><%= user.first_name %></td>
-        <td><%if current_user.admin == true%>
+        <td><%= user.admin %></td>
+        <td><%= link_to "Edit", edit_user_path(user)%>
         <%= link_to 'destroy', user_path(user), method: :delete %>
-        <%end%>
         </td>
         
     </tr>
     <% end %>
   </tbody>
 </table>
+<%else%>
+<table class="table table-sm">
+  <thead>
+    <tr>
+      <th scope="col">User</th>
+      <th scope="col">Name</th>
+      <th scope="col">Admin</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @users.each do |user| %>
+    <tr>
+        <td><%= user.email %></td>
+        <td><%= user.first_name %></td>
+        <%if user.admin == true%>
+        <td>Admin</td>
+        <%else%>
+        <td>Normal User</td>
+        <%end%>
+        
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+<%end%>
 <p>
   <%= link_to 'Home', home_path %> <br> 
 </p>
