--- a/app/views/gm_form2s/edit.html.erb
+++ b/app/views/gm_form2s/edit.html.erb
@@ -2,10 +2,20 @@
 
     <h1>Edit GM Form 2</h1>
 
-
+    <%if current_user.admin == true%>
     <%= render 'form', user_id: @gm_form2.user.id, gm_form2: @gm_form2%>
 
 <p>
-    <%= link_to 'Home', home_path %>
+    <%= link_to 'Back', gm_form2s_path %>
+    <%= link_to 'Home', home_path%>
 </p>
+
+    <%else%>
+    <%= render 'form', user_id: @gm_form2.user.id, gm_form2: @gm_form2%>
+
+<p>
+
+    <%= link_to 'Home', home_path%>
+</p>
+    <%end%>
 </main><!-- /.container -->
