--- a/app/views/panelist_forms/edit.html.erb
+++ b/app/views/panelist_forms/edit.html.erb
@@ -1,11 +1,22 @@
 <main role="main" class="container">
 
     <h1>Edit Panelist Form</h1>
-
+    <%if current_user.admin == true%>
 
     <%= render 'form', user_id: @panelist_form.user.id, panelist_form: @panelist_form%>
 
 <p>
+    <%= link_to 'Back', panelist_forms_path %>
     <%= link_to 'Home', home_path%>
 </p>
+
+    <%else%>
+    <%= render 'form', user_id: @panelist_form.user.id, panelist_form: @panelist_form%>
+
+<p>
+
+    <%= link_to 'Home', home_path%>
+</p>
+
+    <%end%>
 </main><!-- /.container -->
