--- a/app/views/pages/eventinfo.html.erb
+++ b/app/views/pages/eventinfo.html.erb
@@ -24,11 +24,54 @@
       sate your appetite, and schmooze with other attendees.
       </p>
 
-      <br>
-
       <h1>Contact Information</h1>
-      
-      <li>General Information <%= mail_to("Info", "info@midsouthcon.org") %></li>
+
+      <ul>
+        <li>General Information:  <%= mail_to("Info", "info@midsouthcon.org") %></li>
+        <li>Programming:  <%= mail_to("Programming", "programming@midsouthcon.org") %></li>
+        <li>Gaming: <%= mail_to("Gaming", "gaming@midsouthcon.org") %></li>
+        <li>Volunteers: <%= mail_to("Volunteers", "volunteers@midsouthcon.org") %></li>
+        <li>Registration: <%= mail_to("Registration", "registration@midsouthcon.org") %></li>
+        <li>Dealer's Room: <%= mail_to("Dealer's Room", "dealers@midsouthcon.org") %></li>
+        <li>Art Show: <%= mail_to("Art Show", "artshow@midsouthcon.org") %></li>
+      </ul>
+
+      <h1>Convention Committee</h1>
+
+      <p>Below is a list of our Convention Committee (ConComm) meetings for this year. 
+      We have subcommittee meetings throughout the year. The main ConComm meetings are 
+      held at the Benjamin L. Hooks Central Library at 3030 Poplar Ave in Memphis and 
+      reflect the Meeting Room assigned. Unless otherwise noted at the library itself, 
+      we have been assigned Meeting Room C for 2018. Meetings are usually streamed online 
+      <%= link_to "here", "http://original.livestream.com/midsouthcon" %>.
+      </p>
+
+      <h2>2018 ConComm Meetings</h2>
+      <ul>
+        <li>July 15, 2018 - 2pm - Benjamin L. Hooks Central Library</li>
+        <li>August 19, 2018 - 2pm - Benjamin L. Hooks Central Library</li>
+        <li>September 16, 2018 - 2pm - Benjamin L. Hooks Central Library</li>
+        <li>October 14, 2018 - 2pm - Benjamin L. Hooks Central Library</li>
+        <li>November 18, 2018 - 2pm - Benjamin L. Hooks Central Library</li>
+        <li>December 16, 2018 - 2pm - Benjamin L. Hooks Central Library</li>
+      </ul>
+
+      <p>If you are interested in programming, our Programming committee meetings are 
+      listed below.  They are held on the dates listed at the Germantown Community Library, 
+      1925 Exeter Rd, Germantown, TN 38138 from 6:30pm to 8:00pm. All meetings are on 
+      Wednesday in 2018.
+      </p>
+
+      <h2>2018 Programming Meetings</h2>
+      <ul>
+        <li>July 11, 2018 - 6:30pm - Germantown Community Library</li>
+        <li>August 8, 2018 - 6:30pm - Germantown Community Library</li>
+        <li>September 12, 2018 - 6:30pm - Germantown Community Library</li>
+        <li>October 10, 2018 - 6:30pm - Germantown Community Library</li>
+        <li>November 14, 2018 - 6:30pm - Germantown Community Library</li>
+        <li>December 12, 2018 - 6:30pm - Germantown Community Library</li>
+      </ul>
+
 
     </main><!-- /.container -->
 <%end%>
