--- a/app/views/panelist_forms/_form.html.erb
+++ b/app/views/panelist_forms/_form.html.erb
@@ -4,34 +4,7 @@
         <%= form.label :title %>
         <%= form.text_field :title, class: 'form-control' %>
     </div>
-    <div class="field">
-        <%= form.label :first_name %>
-        <%= form.text_field :first_name, class: 'form-control' %>
-    </div>
-    <div class="field">
-        <%= form.label :last_name %>
-        <%= form.text_field :last_name, class: 'form-control' %>
-    </div>
-    <div class="field">
-        <%= form.label :adress %>
-        <%= form.text_field :address, class: 'form-control' %>
-    </div>
-    <div class="field">
-        <%= form.label :city %>
-        <%= form.text_field :city, class: 'form-control' %>
-    </div>
-    <div class="field">
-        <%= form.label :state %>
-        <%= form.text_field :state, class: 'form-control' %>
-    </div>
-    <div class="field">
-        <%= form.label :zip %>
-        <%= form.text_field :zip, class: 'form-control' %>
-    </div>
-    <div class="field">
-        <%= form.label :age %>
-        <%= form.text_field :age, class: 'form-control' %>
-    </div>
+
     <div class="field">
         <%= form.label :pen_name %>
         <%= form.text_field :pen_name, class: 'form-control' %>
@@ -40,14 +13,7 @@
         <%= form.label :badge_name %>
         <%= form.text_field :badge_name, class: 'form-control' %>
     </div>
-    <div class="field">
-        <%= form.label :phone %>
-        <%= form.text_field :phone, class: 'form-control' %>
-    </div>
-    <div class="field">
-        <%= form.label :email_address %>
-        <%= form.text_field :email_address, class: 'form-control' %>
-    </div>
+
     <div class="field">
         <%= form.label :website %>
         <%= form.text_field :website, class: 'form-control' %>
@@ -77,8 +43,8 @@
         <%= form.text_field :amount_of_pro_row, class: 'form-control' %>
     </div>
     <div class="field">
-        <%= form.label :place_in_art_room %>
-        <%= form.text_field :place_in_art_room, class: 'form-control' %>
+        <%= form.label :place_art_in_art_room %>
+        <%= form.text_field :place_art_in_art_room, class: 'form-control' %>
     </div>
     <div class="field">
         <%= form.label :recent_credits %>
