updated validation and panelist form

--- a/app/views/panelist_forms/_form.html.erb
+++ b/app/views/panelist_forms/_form.html.erb
@@ -42,8 +42,8 @@
         <%= form.text_field :amount_of_pro_row, class: 'form-control' %>
     </div>
     <div class="field">
-        <%= form.label :place_in_art_room %>
-        <%= form.text_field :place_in_art_room, class: 'form-control' %>
+        <%= form.label :place_art_in_art_room %>
+        <%= form.text_field :place_art_in_art_room, class: 'form-control' %>
     </div>
     <div class="field">
         <%= form.label :recent_credits %>
